--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.5",
+    "jotai": "^2.8.3",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
